# tapf-classes

./: LICENSE  README.md  tapf-classes.cabal
src/TAPF/: Tautology.hs  Typeclasses1.hs  Typeclasses2.hs  Typeclasses3.hs  Typeclasses4.hs  Typeclasses5.hs
