cabal-version:      3.0
name:               tapf-classes
version:            0.3.0.0
synopsis:           Explaining type classes by translation dictionary passing
license:            MIT
license-file:       LICENSE
author:             Pedro Vasconcelos
maintainer:         pbvascon@fc.up.pt
copyright:          Pedro Vasconcelos
category:           Education
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library 
    import:           warnings
    other-modules:  TAPF.Typeclasses1 
                    TAPF.Typeclasses2
                    TAPF.Typeclasses3
                    TAPF.Typeclasses4
                    TAPF.Typeclasses5

    build-depends:    base ^>=4.18.3.0
    hs-source-dirs:   src
    default-language: Haskell2010
